feat: Implement local backend simulation and Study AI page
Introduces a local continuity layer within the API service to simulate backend responses when the server is unreachable. This enhances development experience and provides a fallback mechanism.

Additionally, a new "Study Assistant" page is added, accessible via the navigation. This page is intended to integrate future AI-powered learning capabilities. The loading state in App.tsx has been refactored to show a more engaging spinner and message. The Navbar now displays a pulsing indicator for the Study AI link. Auth page validation and error handling are also improved.